# prog-instruments-labs

lab_1/FastApi-MongoDB/: main.py
lab_1/FastApi-MongoDB/app/: __init__.py  authentication.py  database.py  product.py  profile.py  schemas.py  security.py
lab_1/FastApi-MongoDB/tests/: __init__.py  conftest.py  test_authentication.py  test_product.py
lab_3/: checksum.py  config.py  patterns.json  result.json  utils.py
lab_4/: config.yaml  pyproject.toml
lab_4/src/app/: main.py  models.py
lab_4/src/app/core/: config.py  database.py  logging_config.py
lab_4/src/app/resources/: user_router.py
lab_4/src/app/schemas/: shemas.py
lab_4/src/app/services/: auth.py
lab_5/: pyproject.toml  requirements.txt  test_simulation.py
lab_5/src/: const.py  enity.py  mapping.py  point.py  test.py
